Widget Workshop done

--- a/CSS/master.css
+++ b/CSS/master.css
@@ -1,6 +1,11 @@
 ﻿@import url(../Content/bootstrap.min.css);
+@import url('../Content/themes/base/jquery-ui.css');
+
+
 
 /* Components */
+
+
 @import url(Components/navbar.css);
 @import url(Components/carousel.css);
 
